--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-# Marisa-Redding.github.io
-<title>Marisa Redding Portfolio</title>
+---
+layout: default
+---
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/BkKQh7b1xMo?si=nSTRi5bcBqvDK-ol" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
