--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 ---
 layout: default
 ---
+<h1>EECS 440 Projects</h1>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/BkKQh7b1xMo?si=nSTRi5bcBqvDK-ol" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<figure>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/BkKQh7b1xMo?si=nSTRi5bcBqvDK-ol" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+  </iframe>
+  <figcaption>
+    p1_gold - Created using Unreal Engine 5 and recorded using a Meta Quest Pro VR headset. Uses blueprints, affordances, materials, and a variety of interactive objects and characters.
+  </figcaption>
+</figure>
